extends CharacterBody2D
class_name Detective

# AI ìƒíƒœ ê´€ë¦¬
enum State { INVESTIGATE, CHASE }
var current_state = State.INVESTIGATE

@export var speed = 190.0
var target_mask_id: int = -1
var current_target: Node2D = null

# ë…¸ë“œ ì°¸ì¡°
@onready var nav_agent = $NavigationAgent2D
@onready var body_sprite = $BodySprite
@onready var catch_area = $CatchArea
@onready var recalculate_timer = $RecalculateTimer
@onready var animation_player = $AnimationPlayer

# í†µí•©ëœ ë§í’ì„  UI
@onready var icon_bubble = $IconBubble

func _ready():
	# 1. ì‚¬ê±´ í˜„ì¥(ì ‘ìˆ˜ì›)ìœ¼ë¡œ ì¶œë°œ
	find_receptionist()
	
	# íƒ€ì´ë¨¸ ë° ì˜ì—­ ì‹œê·¸ë„ ì—°ê²°
	recalculate_timer.timeout.connect(_on_recalculate_timer_timeout)
	catch_area.body_entered.connect(_on_catch_area_body_entered)

func _physics_process(_delta):
	# ë„ì°©í–ˆê±°ë‚˜ ëŒ€í™” ì¤‘(velocityê°€ 0)ì¼ ë•Œ ì• ë‹ˆë©”ì´ì…˜ ì •ì§€
	if nav_agent.is_navigation_finished() or velocity.length() < 10:
		animation_player.stop()
		return

	var next_path_position = nav_agent.get_next_path_position()
	var new_velocity = global_position.direction_to(next_path_position) * speed
	
	velocity = new_velocity
	move_and_slide()
	_update_animation(new_velocity)

func _update_animation(dir: Vector2):
	if abs(dir.x) > abs(dir.y):
		if dir.x > 0: animation_player.play("walk_right")
		else: animation_player.play("walk_left")
	else:
		if dir.y > 0: animation_player.play("walk_down")
		else: animation_player.play("walk_up")

# --- AI íƒìƒ‰ ë° ì¶”ì  ---

func _on_recalculate_timer_timeout():
	match current_state:
		State.INVESTIGATE:
			if is_instance_valid(current_target):
				nav_agent.target_position = current_target.global_position
		State.CHASE:
			find_closest_suspect()
			if is_instance_valid(current_target):
				nav_agent.target_position = current_target.global_position

func find_receptionist():
	var npcs = get_tree().get_nodes_in_group("npc")
	for npc in npcs:
		if npc.get("is_receptionist") == true:
			current_target = npc
			return

func find_closest_suspect():
	var potential_targets = []
	var player = get_tree().get_first_node_in_group("player")
	
	# íƒ€ê²Ÿ ê°€ë©´ì„ ì“´ í”Œë ˆì´ì–´/NPC ìˆ˜ì§‘
	if player and player.current_mask_row == target_mask_id:
		potential_targets.append(player)
	
	for npc in get_tree().get_nodes_in_group("npc"):
		if npc.mask_row == target_mask_id:
			potential_targets.append(npc)
	
	# ê°€ì¥ ê°€ê¹Œìš´ ëŒ€ìƒ ì„ ì •
	var nearest_dist = INF
	var nearest_node = null
	for t in potential_targets:
		var dist = global_position.distance_to(t.global_position)
		if dist < nearest_dist:
			nearest_dist = dist
			nearest_node = t
	current_target = nearest_node

# --- ğŸ” ìˆ˜ì‚¬ ë° ì‹¬ë¬¸ ì—°ì¶œ (í†µí•© UI ì‚¬ìš©) ---

func _on_catch_area_body_entered(body):
	if body == current_target:
		# ì¦‰ì‹œ ì •ì§€
		nav_agent.target_position = global_position
		velocity = Vector2.ZERO
		animation_player.stop()

		# ==========================================
		# [ìƒí™© A] ì ‘ìˆ˜ì› íƒë¬¸ (ê³µì†í•˜ê²Œ ì‹œì‘)
		# ==========================================
		if current_state == State.INVESTIGATE and body.get("is_receptionist"):
			# í˜•ì‚¬: [?] (ì •ë³´ ìš”ì²­)
			icon_bubble.show_detective_chat("emote", 0) 
			await get_tree().create_timer(1.5).timeout
			
			if body.has_method("get_handed_mask_info"):
				target_mask_id = body.get_handed_mask_info()
				
				# ì ‘ìˆ˜ì›: [ê°€ë©´ ì•„ì´ì½˜] (ì´ê±¸ ì¤¬ì–´ìš”)
				if body.has_node("IconBubble"):
					body.get_node("IconBubble").show_detective_chat("mask", target_mask_id)
				await get_tree().create_timer(1.5).timeout
				
				# í˜•ì‚¬: [!] (í™•ì¸ ì™„ë£Œ)
				icon_bubble.show_detective_chat("emote", 1)
				await get_tree().create_timer(1.0).timeout
				
				current_state = State.CHASE
				current_target = null

		# ==========================================
		# [ìƒí™© B] ìš©ì˜ì ì¶”ê²© ë° ì‹¬ë¬¸
		# ==========================================
		elif current_state == State.CHASE:
			# 1. í˜•ì‚¬: [!] (ì¡ì•˜ë‹¤!)
			icon_bubble.show_detective_chat("emote", 1)
			await get_tree().create_timer(1.0).timeout
			
			# ì§„ì§œ ë²”ì¸(í”Œë ˆì´ì–´)ì¼ ê²½ìš°
			if body.is_in_group("player"):
				get_tree().paused = true # ê²Œì„ ì˜¤ë²„ ì²˜ë¦¬
				return
				
			# ì–µìš¸í•œ NPCì¼ ê²½ìš° (ì •ë³´ ê°±ì‹ )
			elif body.is_in_group("npc"):
				# 2. NPC: [X] (ì € ì•„ë‹ˆì—ìš”!)
				if body.has_node("IconBubble"):
					body.get_node("IconBubble").show_detective_chat("emote", 2) 
				await get_tree().create_timer(1.5).timeout
				
				# 3. í˜•ì‚¬: [ê°€ë©´] + [?] (ê·¸ëŸ¼ ë²”ì¸ì€ ì§€ê¸ˆ ë¬´ìŠ¨ ê°€ë©´ì´ì§€?)
				icon_bubble.show_detective_chat("inquiry", target_mask_id)
				await get_tree().create_timer(1.5).timeout
				
				# 4. NPCì˜ ìƒˆë¡œìš´ ì œë³´
				if body.has_method("snitch_on_player"):
					target_mask_id = body.snitch_on_player()
					
					# NPC: [ìƒˆë¡œìš´ ê°€ë©´] (ë²”ì¸ì€ ì´ê±¸ ì¼ì–´ìš”!)
					if body.has_node("IconBubble"):
						body.get_node("IconBubble").show_detective_chat("mask", target_mask_id)
					await get_tree().create_timer(2.0).timeout
					
					# 5. í˜•ì‚¬: [!] (ì•Œì•˜ë‹¤! ì¬ì¶”ê²©!)
					icon_bubble.show_detective_chat("emote", 1)
				
				# ì¬ì¶”ê²© ì‹œì‘
				current_target = null
				recalculate_timer.start(0.5)
